--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,15 @@
     "require": {
         "php": ">=5.5.9",
 
-        "intothesource/entrance" : "^0.1.1",
-        "intothesource/users": "^0.0.1",
+        "intothesource/entrance" : "0.1.*",
+        "intothesource/users": "0.*",
 
         "laravel/laravel": "5.1.*",
         "laravel/framework": "5.1.*",
         "rap2hpoutre/laravel-log-viewer": "^0.3.0",
         "guzzlehttp/guzzle": "^6.0",
         "illuminate/html": "^5.0",
-        "laravelista/ekko": "~1.0",
+        "laravelista/ekko": "~1.0"
     },
     "autoload": {
       "psr-4": {
